fix mobile version ios

--- a/src/assets/css/blocks/_project.css
+++ b/src/assets/css/blocks/_project.css
@@ -101,7 +101,7 @@
   position: relative;
   background-position: var(--project-bg-pos, 0% 50%);
 
-  &::before {
+  /* &::before {
     content: "";
     width: 100vw;
     position: absolute;
@@ -117,7 +117,7 @@
     background-size: 200% 80%;
     background-repeat: no-repeat;
     background-position: 0% 50%;
-  }
+  } */
 
   @media (--md) {
     width: 50%;
